# twitch-queue-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.txt
.github/: dependabot.yml
.github/workflows/: compile.yml  docker.yml  lint.yml
src/: config.rs  lib.rs  main.rs  termcolor.rs
src/bot/: chat.rs  irc.rs  mod.rs  queue.rs  ratelimit.rs
src/lib/: chat.rs  irc.rs  mod.rs  queue.rs  ratelimit.rs
