[package]
name = "twitch-queue-bot"
version = "0.3.0"
edition = "2021"
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.17.1", features = [
    "rustls-tls-webpki-roots",
] }
futures-util = "0.3.21"
