[package]
name = "twitch-queue-bot"
version = "0.3.1"
edition = "2021"
rust-version = "1.69"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.19.0", features = [
    "rustls-tls-webpki-roots",
] }
futures-util = "0.3.28"

tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
