[package]
name = "twitch-queue-bot"
version = "0.5.0"
edition = "2021"
rust-version = "1.69"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
twitch-irc = { version = "5.0.1", features = [
    "transport-ws-rustls-webpki-roots",
], default-features = false }

tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
